MMN14/Tests/Invalid assembly files/ps-error4.err
Error: The label name @r9 in line 7 isn't legal
Error: There is an illegal number in line 14, each number has to be between -2048 to 2047
